docs(java): update draft jvm-tuning study pack